--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
   <% @restaurants.each do |restaurant| %>
-    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+    <li>
+      <%= link_to restaurant.name, restaurant_path(restaurant) %>
+      ( <%= link_to "Delete", restaurant_path(restaurant), method: :delete, remote: true, data: { confirm: 'Sure?'}  %> )
+
+      </li>
   <% end %>
 </ul>
