--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,10 +8,14 @@
     <% if @restaurant.reviews.blank? %>
       Be the first to leave a review for <%= @restaurant.name %>
     <% else %>
-      <% @restaurant.reviews.each do |review| %>
-        <p><%= review.content %></p>
+      <% @restaurant.reviews.last(5).each do |review| %>
+        <p id="review-<%= review.id %>"><%= review.content %></p>
       <% end %>
     <% end %>
   </div>
 
+  <%= simple_form_for([ @restaurant, @review ], remote: true) do |f| %>
+    <%= f.input :content, as: :text, autofocus: true %>
+    <%= f.button :submit %>
+  <% end %>
 </div>
